Fix spacing

--- a/vizro-core/src/vizro/static/css/layout.css
+++ b/vizro-core/src/vizro/static/css/layout.css
@@ -10,7 +10,7 @@
   display: flex;
   flex: 0 0 auto;
   flex-direction: column;
-  gap: var(--spacing-08);
+  gap: var(--spacing-06);
   overflow: auto;
   padding: 32px 32px 0;
   width: 352px;
